--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
       rel="stylesheet"
       href="{{rootURL}}assets/kshop-app.css"
     />
+    <link rel="stylesheet" href="assets/kshop-app.css" data-embroider-ignore/>
 
     {{content-for "head-footer"}}
   </head>
